2012-01-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_agents.php
	 operation/incidents/incident.php
	 operation/incidents/incident_detail.php
     operation/agentes/ver_agente.php
	 godmode/agentes/agent_incidents.php
	 godmode/agentes/configurar_agente.php: Added the possibility to add
	 agent to an incident and added new tab in agent view if the agent
	 has incidents associated.
  
	 * pandoradb.postgreSQL.sql
	 pandoradb.oracle.sql
	 pandoradb.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql
	 extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql	
	 extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: modified 
	 table tincidencia.
	 
	 Pending task: # 3472447
	 
2012-01-23  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/agentes/estado_agente.php
	  include/functions_agents.php: Simplify code estado_agente
	and fix bug in search filter.

2012-01-23  Ramon Novoa  <rnovoa@artica.es>

	* pandoradb_data.sql, pandoradb.sql,
	  pandoradb.data.postgreSQL.sql,
	  pandoradb.data.oracle.sql,
	  godmode/netflow/nf_manage.php: Added netflow daemon configuration
	  options.

2012-01-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Modified get_policy_modules function.

2012-01-23  Koichiro Kikuchi  <koichiro@rworks.jp>

	* include/functions_servers.php: Exclude modules which belong to
	  disabled agent from server performance and lag calculation.

2012-01-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Modified get_all_agents function.

2012-01-20  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_netflow.php,
	  operation/menu.php,
	  operation/netflow/nf_view.php,
	  godmode/netflow/nf_report_item.php: Netflow live view support and small
	  fixes.

	* operation/netflow/nf_live_view.php: Added to repository: Netflow live view.

2012-01-20 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_api.php: Modified in parameters in 