@@ -1,5 +1,10 @@
 2012-01-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
 
+	* include/functions_agents.php: Removed Php warning in function 
+	agents_get_agents.
+
+2012-01-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
+
 	* include/functions_agents.php
 	 operation/incidents/incident.php
 	 operation/incidents/incident_detail.php
